package com.krygodev.pokedexapp.util

object TestTags {
    const val LAZY_GRID = "grid"
    const val FAB = "fab"
    const val SEARCH_FIELD = "search_field"
    const val SEARCH_ERROR = "search_error"
    const val BACK_ARROW = "back_arrow"
    const val POKEMON_TYPE = "pokemon_type"
    const val POKEMON_STAT = "pokemon_stat"
}